# QtQuickComponents

./: AGENTS.md  CMakeLists.txt  README.md
cmake/: QtQuickComponentsConfig.cmake.in
docs/superpowers/plans/: 2026-06-19-single-wnd-frame-source-phase.md  2026-06-19-single-wnd-implementation.md  2026-06-19-single-wnd-renderer-phase.md  2026-06-19-single-wnd-yuv-input-phase.md  2026-06-19-single-wnd-yuv-node-integration-phase.md  2026-06-19-single-wnd-yuv-render-node-skeleton-phase.md  2026-06-19-single-wnd-yuv-resource-state-phase.md  2026-06-19-single-wnd-yuv-snapshot-phase.md  2026-06-20-single-wnd-yuv-rhi-texture-set-phase.md  2026-06-20-single-wnd-yuv-shader-resource-bindings-phase.md  2026-06-20-single-wnd-yuv-shader-uniforms-phase.md  2026-06-20-single-wnd-yuv-texture-upload-phase.md  2026-06-20-single-wnd-yuv-uniform-srb-integration-phase.md  2026-06-21-namespace-migration.md
docs/superpowers/specs/: 2026-06-21-namespace-migration-design.md
examples/demo/: CMakeLists.txt  Main.qml  main.cpp
examples/single_wnd_demo/: CMakeLists.txt  FramePump.cpp  FramePump.h  Main.qml  main.cpp
include/QtQuickComponents/: ComponentTheme.h  TimelineEnums.h  TimelineModel.h  TimelineSegment.h  WndViewModel.h
qml/: IconButton.qml  Label.qml  PlayheadOverlay.qml  ProgressSlider.qml  TextField.qml  TimelineInputHandler.qml  TimelineRuler.qml  TimelineTrack.qml  TimelineView.qml
src/: ComponentTheme.cpp  ComponentTheme.h  RulerModel.cpp  RulerModel.h  TimelineEnums.h  TimelineModel.cpp  TimelineModel.h  TimelineSegment.h  TimelineViewport.cpp  TimelineViewport.h
src/controls/: Button.qml  ComboBox.qml  IconButton.qml  Label.qml  ProgressSlider.qml  TextField.qml
src/monitor/: BorderLayer.qml  GlobalVideoRenderer.h  NoSignalLayer.qml  OSDLayer.qml  SingleWnd.qml  TitleBar.qml  VideoSurface.cpp  VideoSurface.h  Yuv420GeometryBuffer.cpp  Yuv420GeometryBuffer.h  Yuv420GraphicsPipeline.cpp  Yuv420RenderNode.cpp  Yuv420RenderNode.h  Yuv420ShaderPipeline.cpp  Yuv420ShaderPipeline.h  Yuv420ShaderUniforms.cpp  Yuv420ShaderUniforms.h  Yuv420TextureSet.cpp  Yuv420TextureSet.h
src/monitor/shaders/: Yuv420Blit.frag  Yuv420Blit.vert
src/theme/: ComponentTheme.cpp  ComponentTheme.h  ThemeFileWatcher.cpp  ThemeFileWatcher.h  ThemeJsonLoader.cpp  ThemeJsonLoader.h  ThemeTokens.h
src/timeline/: PlayheadOverlay.qml  RulerModel.cpp  RulerModel.h  RulerTick.h  TimelineInputHandler.qml  TimelineModel.cpp  TimelineModel.h  TimelineTrack.qml  TimelineTrackModel.cpp  TimelineTrackModel.h  TimelineView.qml  TimelineViewport.cpp  TimelineViewport.h
src/window/: GlobalVideoRenderer.h  NoSignalLayer.qml  WndViewModel.cpp  Yuv420ShaderUniforms.h  Yuv420TextureSet.cpp
src/window/singleWnd/: GlobalVideoRenderer.cpp  Yuv420RenderNode.cpp
src/window/singleWnd/model/: WndViewModel.cpp
src/window/singleWnd/rendering/: Yuv420GeometryBuffer.cpp  Yuv420GeometryBuffer.h  Yuv420GraphicsPipeline.cpp  Yuv420GraphicsPipeline.h  Yuv420RenderNode.cpp  Yuv420RenderNode.h  Yuv420ShaderPipeline.cpp  Yuv420ShaderPipeline.h  Yuv420ShaderUniforms.cpp  Yuv420ShaderUniforms.h  Yuv420TextureSet.cpp  Yuv420TextureSet.h  Yuv420Vertex.h
src/window/singleWnd/rendering/shaders/: Yuv420Blit.vert
src/window/singleWnd/video/: GlobalVideoRenderer.cpp  GlobalVideoRenderer.h  VideoSurface.cpp  VideoSurface.h
tests/: CMakeLists.txt  manual_video_stress.cpp  tst_component_theme.cpp  tst_global_video_renderer.cpp  tst_qml_components.cpp  tst_ruler_model.cpp  tst_theme_file_watcher.cpp  tst_theme_json_loader.cpp  tst_timeline_model.cpp  tst_timeline_viewport.cpp  tst_video_surface.cpp  tst_wnd_view_model.cpp  tst_yuv420_geometry_buffer.cpp  tst_yuv420_graphics_pipeline.cpp  tst_yuv420_render_node.cpp  tst_yuv420_shader_pipeline.cpp  tst_yuv420_shader_uniforms.cpp  tst_yuv420_texture_set.cpp  verify_public_headers.cmake  verify_qml_api_surface.cmake  verify_qmllint_clean.cmake  verify_yuv_render_node_contract.cmake
tests/qml/: tst_controls.qml  tst_playhead_overlay.qml  tst_single_wnd.qml  tst_timeline_view.qml
themes/: dark.json  light.json
